# throughball-ai

./: .env.example  AGENTS.md  README.md  pyproject.toml
docs/contracts/: fan-gathering-agent.md  match-analyst-agent.md  mcp_contracts.md  observability.md
docs/prds/: 03-02-mcp-server-foundation.md  03-04-fan-gathering-adk-agent.md  03-05-city-concierge-adk-agent.md  03-06-match-analyst-adk-agent.md  03-07-itinerary-adk-agent.md  05-03-fan-gathering-agent.md  06-01-knowledge-corpus-structure.md  06-02-document-ingestion-pipeline.md  06-03-supabase-vector-schema.md  06-04-adk-runtime-foundation.md  (+5 more)
plans/: 03-02-reasoning-patterns-plan.md  03-02-reasoning-patterns.md  03-04-fan-gathering-adk-agent.md  03-05-city-concierge-adk-agent.md  03-06-match-analyst-adk-agent.md  05-03-fan-gathering-agent.md  06-01-knowledge-corpus-structure.md  06-02-document-ingestion-pipeline.md  06-04-adk-runtime-foundation.md  07-01-mcp-tool-foundation.md  08-02-adk-callbacks-and-tracing-plan.md  08-02-adk-callbacks-and-tracing.md  09-01-rag-answering-service.md  ai-runtime-foundation.md  itinerary-adk-agent.md  mcp-server-foundation.md
telemetry/: agent_runs.jsonl  traces.jsonl
tests/: test_adk_runtime.py  test_agent_metrics.py  test_city_concierge_adk_agent.py  test_costs.py  test_document_ingestion.py  test_document_retrieval.py  test_fan_gathering_adk_agent.py  test_fan_gathering_agent.py  test_health.py  test_itinerary_adk_agent.py  test_knowledge_corpus.py  test_match_analyst_adk_agent.py  test_model_router.py  test_rag_grounding_and_citations.py  test_rag_prompt_builder.py  test_rag_retriever.py  test_rag_service.py  test_reasoning_patterns.py  test_runtime_boundaries.py  test_telemetry.py
(+186 files in other folders)
