[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "throughball-ai"
version = "0.1.0"
description = "Low-cost AI orchestration runtime for Throughball."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "google-adk>=0.1",
    "google-cloud-aiplatform>=1.60",
    "mcp>=1.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "psycopg[binary]>=3.2",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "smoke: live integration tests requiring real API credentials (deselect with '-m not smoke')",
]
